2010-11-08  Miklos Szeredi <miklos@szeredi.hu>

	* Open /dev/null for write instead of read for redirecting stdout
	and stderr

2010-10-14  Miklos Szeredi <miklos@szeredi.hu>

	Use LTLIBICONV when linking libfuse.  This fixes building against
	uclibc + libiconv.  Patch by Natanael Copa

2010-10-05  Miklos Szeredi <miklos@szeredi.hu>

	* Add missing argument check in ulockmgr.c to prevent calling
	ulockmgr_server with illegal arguments. This would cause an ever
	growing list of ulockmgr_server processes with an endless list of
	open files which finally exceeds the open file handle limit.
	Patch by Markus Ammer

2010-09-28  Miklos Szeredi <miklos@szeredi.hu>

	* Fix ambiguous symbol version for fuse_chan_new.
	fuse_versionscript included fuse_chan_new in both FUSE_2.4 and
	FUSE_2.6.  Remove the FUSE_2.4, which is invalid.

2010-09-28  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.5

2010-09-28  Miklos Szeredi <miklos@szeredi.hu>

	* Fix option escaping for fusermount.  If the "fsname=" option
	contained a comma then the option parser in fusermount was
	confused (Novell bugzilla #641480).  Fix by escaping commas when
	passing them over to fusermount.  Reported by Jan Engelhardt

2010-05-10  Miklos Szeredi <miklos@szeredi.hu>

	* Remove "chmod root" from install of fusermount.  Reported by
	Lucas C. Villa Real

2010-04-26  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.4

2010-04-26  Miklos Szeredi <miklos@szeredi.hu>

	* Fix checking for symlinks in umount from /tmp.  Reported by Al
	Viro

	* Fix umounting if /tmp is a symlink.  Reported by Franco Broi

2010-02-18  Miklos Szeredi <miklos@szeredi.hu>

	* Fix definition of FUSE_OPT_END for C++.  Reported by Tim
	Bruylants

2010-02-03  Miklos Szeredi <miklos@szeredi.hu>

	* Fix stack alignment for clone()

2010-02-01  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.3

2010-02-01  Miklos Szeredi <miklos@szeredi.hu>

	* Using "--no-canonicalize" with umount(8) conflicts with the race